# gjs-typelib-installer

./: .gitignore  .npmrc  LICENSE  ambient.d.ts  build.js  compose.yaml  eslint.config.mjs  generate-installer.js  generate-resolver.js  gjs-typelib-installer.js  installer.js  jsdoc.jsonc  meson.build  meson.options  package-lock.json  package.json  renovate.json  resolver.js  tsconfig.json
.github/workflows/: ci.yml
tests/: almalinux-10.dockerfile  alpine-3.19.dockerfile  alpine-3.20.dockerfile  alpine-3.21.dockerfile  alpine-3.22.dockerfile  alpine-3.23.dockerfile  alpine-3.24.dockerfile  alpine-edge.dockerfile  archlinux.dockerfile  centos-10.dockerfile  debian-sid.dockerfile  debian-stable.dockerfile  debian-testing.dockerfile  e2e-test.js  e2e-tests.sh  fedora-41.dockerfile  fedora-42.dockerfile  fedora-43.dockerfile  fedora-44.dockerfile  install.js  meson.build  opensuse-leap-15.6.dockerfile  opensuse-leap-16.0.dockerfile  opensuse-tumbleweed.dockerfile  sequence.sh  sequence2.sh  test.js  ubuntu-24.04.dockerfile  ubuntu-25.04.dockerfile  ubuntu-25.10.dockerfile  ubuntu-26.04.dockerfile  verify.js  yes.expect
tests/files/etc/polkit-1/rules.d/: allow-packagekit.rules  allow-pkexec.rules
tests/files/etc/systemd/: journald.conf
