# SPDX-FileCopyrightText: 2025 Aleksandr Mezin <mezin.alexander@gmail.com>
#
# SPDX-License-Identifier: MIT

project('typelib-installer')

# variables for subproject.get_variable()
# https://mesonbuild.com/Reference-manual_returned_subproject.html#subprojectget_variable

resolver_source = files('resolver.js')
installer_source = files('installer.js')
generate_resolver_tool = files('generate-resolver.js')
